--- a/css/index.css
+++ b/css/index.css
@@ -138,15 +138,24 @@ header nav a:hover {
   background: #f1dabf;
   border-radius: 10px;
 }
+@media (max-width:500px) {
+  .navbar {
+    height: 70px;
+    background: #f1dabf;
+    border-radius: 10px;
+  }
+}
 body {
   background: #cd5c5c;
-}
-h1 {
-  font-size: 25px;
 }
 .container {
   width: 880px;
   margin: 0 auto;
+}
+@media (max-width:500px) {
+  .container {
+    width: 90%;
+  }
 }
 .header-img {
   width: 100%;
@@ -155,12 +164,27 @@ h1 {
   font-family: 'Crimson Text', serif;
   color: #2e0014;
 }
-.mainimage {
+.header-img .mainimage {
   border-radius: 50px;
   border: double 6px #2e0014;
   margin-top: 20px;
   margin-bottom: 20px;
   width: 100%;
+}
+@media (max-width:500px) {
+  .header-img {
+    width: 100%;
+    position: relative;
+    text-align: center;
+    font-family: 'Crimson Text', serif;
+    color: #2e0014;
+  }
+  .header-img .mainimage {
+    border-radius: 30px;
+    border: double 6px #2e0014;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
 h1 {
   position: absolute;
@@ -170,17 +194,19 @@ h1 {
   font-size: 62.5%;
   font-size: 3.6rem;
 }
+@media (max-width:500px) {
+  h1 {
+    font-size: 2rem;
+    left: 25%;
+    margin-left: 50px;
+    top: 85%;
+  }
+}
 h2 {
   font-size: 62.5%;
   font-size: 2.5rem;
   font-family: 'Crimson Text', serif;
   color: #2e0014;
-}
-.welcomep {
-  font-size: 62.5%;
-  font-size: 1.5rem;
-  font-family: 'Raleway', sans-serif;
-  margin-bottom: 30px;
 }
 .welcome {
   padding: 20px;
@@ -190,6 +216,18 @@ h2 {
   border-radius: 10px;
   height: 300px;
 }
+.welcome .welcomep {
+  font-size: 62.5%;
+  font-size: 1.5rem;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 30px;
+}
+@media (max-width:500px) {
+  .welcome {
+    width: 90%;
+    height: 450px;
+  }
+}
 .reviews {
   padding: 20px;
   margin-top: 20px;
@@ -198,10 +236,16 @@ h2 {
   background: #f1dabf;
   border-radius: 10px;
 }
-.reviewp {
+.reviews .reviewp {
   font-size: 62.5%;
   font-size: 1rem;
   font-family: 'Raleway', sans-serif;
+}
+@media (max-width:500px) {
+  .reviews {
+    width: 90%;
+    height: 400px;
+  }
 }
 p {
   margin-top: 20px;
@@ -216,14 +260,12 @@ button {
   border: 1px solid #2e0014;
   border-radius: 10px;
   cursor: pointer;
+  animation: bounce 1s infinite alternate;
+  -webkit-animation: bounce 1s infinite alternate;
 }
 button:hover {
   background: white;
   color: #558b6e;
-}
-button {
-  animation: bounce 1s infinite alternate;
-  -webkit-animation: bounce 1s infinite alternate;
 }
 @keyframes bounce {
   from {
@@ -237,4 +279,9 @@ footer {
   margin: 32px 0;
   text-align: center;
   font-size: 14px;
+}
+@media (max-width:500px) {
+  footer {
+    width: 90%;
+  }
 }
