--- a/Less/homepage.less
+++ b/Less/homepage.less
@@ -40,18 +40,17 @@ body {
 	}
 }
 
-h1 {
+.secret {
 	position: absolute;
 	bottom: 0;
-	left: 33%;
+	right: 8%;
 	transform: translate(-50%, -50%);
 	font-size: 62.5%;
 	font-size: 3.6rem;
 	@media @mobile {
 		font-size: 2.0rem;
-		left: 25%;
-		margin-left: 50px;
-		top: 85%;
+		right: 10px;
+		bottom: 20px;
 	}
 }
 
