--- a/Less/navbar.less
+++ b/Less/navbar.less
@@ -16,6 +16,9 @@ header nav a {
 	border-radius: 10px;
 	@media @mobile {
 		height: 70px;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
 		background: @cards;
 		border-radius: 10px;
 	}
