--- a/css/index.css
+++ b/css/index.css
@@ -141,6 +141,9 @@ header nav a:hover {
 @media (max-width:500px) {
   .navbar {
     height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: #f1dabf;
     border-radius: 10px;
   }
@@ -186,20 +189,19 @@ body {
     margin-bottom: 20px;
   }
 }
-h1 {
+.secret {
   position: absolute;
   bottom: 0;
-  left: 33%;
+  right: 8%;
   transform: translate(-50%, -50%);
   font-size: 62.5%;
   font-size: 3.6rem;
 }
 @media (max-width:500px) {
-  h1 {
+  .secret {
     font-size: 2rem;
-    left: 25%;
-    margin-left: 50px;
-    top: 85%;
+    right: 10px;
+    bottom: 20px;
   }
 }
 h2 {
@@ -283,5 +285,119 @@ footer {
 @media (max-width:500px) {
   footer {
     width: 90%;
+  }
+}
+body {
+  background: #cd5c5c;
+}
+.container {
+  width: 880px;
+  margin: 0 auto;
+}
+@media (max-width:500px) {
+  .container {
+    width: 90%;
+  }
+}
+.about {
+  position: absolute;
+  bottom: 8%;
+  right: 1%;
+  transform: translate(-50%, -50%);
+  font-size: 62.5%;
+  font-size: 3.6rem;
+}
+@media (max-width:500px) {
+  .about {
+    font-size: 2rem;
+    top: 81%;
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 203px;
+  }
+}
+h2 {
+  font-size: 62.5%;
+  font-size: 2.5rem;
+  font-family: 'Crimson Text', serif;
+  color: #2e0014;
+}
+.meet {
+  padding: 20px;
+  align-items: center;
+  text-align: center;
+  background: #f1dabf;
+  border-radius: 10px;
+  height: 250px;
+}
+.meet .meetp {
+  font-size: 62.5%;
+  font-size: 1.5rem;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 30px;
+}
+@media (max-width:500px) {
+  .meet {
+    width: 90%;
+    height: 350px;
+  }
+}
+span {
+  color: #558b6e;
+  font-weight: bolder;
+}
+.people {
+  font-size: 14px;
+  margin-top: 25px;
+  border-radius: 10px;
+  background: #f1dabf;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  flex-direction: row;
+}
+.people .person {
+  width: 20%;
+  border-radius: 50px;
+  padding: 35px;
+}
+@media (max-width:500px) {
+  .people {
+    width: 83%;
+    display: flex;
+    flex-direction: row;
+    margin-left: 40px;
+  }
+}
+h3 {
+  font-size: 62.5%;
+  font-size: 1rem;
+  color: #2e0014;
+  font-family: 'Crimson Text', serif;
+  font-style: italic;
+  text-align: center;
+  padding-top: 40px;
+}
+h4 {
+  font-size: 62.5%;
+  font-size: 1rem;
+  text-decoration: underline;
+}
+.contact {
+  font-size: 62.5%;
+  font-size: 0.8rem;
+  color: #2e0014;
+  background: #f1dabf;
+  margin-top: 20px;
+  border-radius: 10px;
+  width: 20%;
+  margin-left: 340px;
+  text-align: center;
+  padding: 10px;
+}
+@media (max-width:500px) {
+  .contact {
+    width: 40%;
+    margin-left: 120px;
   }
 }
