--- a/Less/homepage.less
+++ b/Less/homepage.less
@@ -8,6 +8,9 @@ body {
 	@media @mobile {
 		width: 90%;
 	}
+	@media @tablet {
+		width: 90%;
+	}
 }
 
 .header-img {
@@ -24,6 +27,13 @@ body {
 		width: 100%;
 	}
 }
+@media @tablet {
+	.header-img {
+		width: 80%;
+		margin-left: 20px;
+	}
+}
+
 @media @mobile {
 	.header-img {
 		width: 100%;
@@ -52,6 +62,11 @@ body {
 		right: 10px;
 		bottom: 20px;
 	}
+	@media @tablet {
+		font-size: 3.0rem;
+		right: 10px;
+		bottom: 10px;
+	}
 }
 
 h2 {
@@ -73,6 +88,13 @@ h2 {
 		font-size: 1.5rem;
 		font-family: 'Raleway', sans-serif;
 		margin-bottom: 30px;
+	}
+}
+@media @tablet {
+	.welcome {
+		width: 70%;
+		height: 350px;
+		margin-left: 50px;
 	}
 }
 @media @mobile {
@@ -99,6 +121,12 @@ h2 {
 	.reviews {
 		width: 90%;
 		height: 400px;
+	}
+}
+@media @tablet {
+	.reviews {
+		width: 70%;
+		margin-left: 50px;
 	}
 }
 p {
