--- a/css/index.css
+++ b/css/index.css
@@ -138,7 +138,7 @@ header nav a:hover {
   background: #f1dabf;
   border-radius: 10px;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .navbar {
     height: 70px;
     display: flex;
@@ -148,7 +148,7 @@ header nav a:hover {
     border-radius: 10px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .navbar {
     width: 80%;
     margin-left: 20px;
@@ -161,12 +161,12 @@ body {
   width: 880px;
   margin: 0 auto;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .container {
     width: 90%;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .container {
     width: 90%;
   }
@@ -185,13 +185,13 @@ body {
   margin-bottom: 20px;
   width: 100%;
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .header-img {
     width: 80%;
     margin-left: 20px;
   }
 }
-@media (max-width:500px) {
+@media (max-width:768px) and (min-width: 501px)  and (max-width:500px)  {
   .header-img {
     width: 100%;
     position: relative;
@@ -206,6 +206,70 @@ body {
     margin-bottom: 20px;
   }
 }
+.secretcard {
+  display: flex;
+}
+@media (max-width:500px)  {
+  .secretcard {
+    flex-direction: column;
+  }
+}
+@media (max-width:768px) and (min-width: 501px)  {
+  .secretcard {
+    flex-direction: column;
+  }
+}
+.secretcard .cardimage {
+  width: 60%;
+  border-radius: 60px;
+  border: double 6px #2e0014;
+  margin-top: 10px;
+  -webkit-filter: brightness(70%);
+  filter: brightness(60%);
+}
+@media (max-width:500px)  {
+  .secretcard .cardimage {
+    border-radius: 30px;
+    width: 80%;
+    margin-left: 30px;
+  }
+}
+@media (max-width:768px) and (min-width: 501px)  {
+  .secretcard .cardimage {
+    border-radius: 50px;
+    width: 50%;
+    margin-left: 150px;
+  }
+}
+h5 {
+  font-size: 62.5%;
+  font-size: 1.3rem;
+  font-family: 'Raleway', sans-serif;
+  color: #2e0014;
+  background: #f1dabf;
+  padding: 45px;
+  margin-top: 10px;
+  margin-right: 8px;
+  border-radius: 200px;
+  text-align: center;
+  font-style: italic;
+  border: solid black 2px;
+}
+@media (max-width:500px)  {
+  h5 {
+    border-radius: 100px;
+    font-size: 1rem;
+  }
+}
+@media (max-width:768px) and (min-width: 501px)  {
+  h5 {
+    border-radius: 100px;
+    padding: 10px;
+    font-size: 1.3rem;
+    width: 70%;
+    margin-left: 60px;
+  }
+}
 .secret {
   position: absolute;
   bottom: 0;
@@ -214,14 +278,14 @@ body {
   font-size: 62.5%;
   font-size: 3.6rem;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .secret {
     font-size: 2rem;
     right: 10px;
     bottom: 20px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .secret {
     font-size: 3rem;
     right: 10px;
@@ -242,24 +306,24 @@ h2 {
   border-radius: 10px;
   height: 300px;
 }
-.welcome .welcomep {
-  font-size: 62.5%;
-  font-size: 1.5rem;
-  font-family: 'Raleway', sans-serif;
-  margin-bottom: 30px;
-}
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .welcome {
     width: 70%;
     height: 350px;
     margin-left: 50px;
   }
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .welcome {
     width: 90%;
     height: 450px;
   }
+}
+.welcomep {
+  font-size: 62.5%;
+  font-size: 1.5rem;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 30px;
 }
 .reviews {
   padding: 20px;
@@ -269,26 +333,26 @@ h2 {
   background: #f1dabf;
   border-radius: 10px;
 }
-.reviews .reviewp {
-  font-size: 62.5%;
-  font-size: 1rem;
-  font-family: 'Raleway', sans-serif;
-}
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .reviews {
     width: 90%;
     height: 400px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .reviews {
     width: 70%;
     margin-left: 50px;
   }
 }
+.reviewp {
+  font-size: 62.5%;
+  font-size: 1rem;
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
+}
 p {
   margin-top: 20px;
-  font-style: italic;
 }
 button {
   background: #558b6e;
@@ -319,12 +383,12 @@ footer {
   text-align: center;
   font-size: 14px;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   footer {
     width: 90%;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   footer {
     margin: 32px 0;
     margin-right: 50px;
@@ -337,7 +401,7 @@ body {
   width: 880px;
   margin: 0 auto;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .container {
     width: 90%;
   }
@@ -350,7 +414,7 @@ body {
   font-size: 62.5%;
   font-size: 3.6rem;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .about {
     font-size: 2rem;
     top: 81%;
@@ -359,7 +423,7 @@ body {
     margin-left: 203px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .about {
     font-size: 3rem;
   }
@@ -378,24 +442,24 @@ h2 {
   border-radius: 10px;
   height: 250px;
 }
-.meet .meetp {
-  font-size: 62.5%;
-  font-size: 1.5rem;
-  font-family: 'Raleway', sans-serif;
-  margin-bottom: 30px;
-}
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .meet {
     width: 90%;
     height: 350px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .meet {
     width: 70%;
     height: 300px;
     margin-left: 37px;
   }
+}
+.meet .meetp {
+  font-size: 62.5%;
+  font-size: 1.5rem;
+  font-family: 'Raleway', sans-serif;
+  margin-bottom: 30px;
 }
 .slide {
   color: #558b6e;
@@ -414,12 +478,7 @@ h2 {
   align-content: center;
   flex-direction: row;
 }
-.people .person {
-  width: 20%;
-  border-radius: 50px;
-  padding: 35px;
-}
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .people {
     width: 83%;
     display: flex;
@@ -427,11 +486,16 @@ h2 {
     margin-left: 40px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .people {
     width: 70%;
     margin-left: 65px;
   }
+}
+.people .person {
+  width: 20%;
+  border-radius: 50px;
+  padding: 35px;
 }
 h3 {
   font-size: 62.5%;
@@ -459,13 +523,13 @@ h4 {
   text-align: center;
   padding: 10px;
 }
-@media (max-width:500px) {
+@media (max-width:500px)  {
   .contact {
     width: 40%;
     margin-left: 120px;
   }
 }
-@media (max-width:768px) and (min-width: 501px) {
+@media (max-width:768px) and (min-width: 501px)  {
   .contact {
     width: 20%;
     margin-left: 270px;
